static/css/stylesheet.css
/* ... */
/* LiteralStringInterpol */
.chroma .si {
  color: #ffeead
}

/* LiteralStringOther */
.chroma .sx {
  color: #d1f1a9
}

/* LiteralStringRegex */
.chroma .sr {
  color: #d1f1a9
}

/* LiteralStringSingle */
.chroma .s1 {
  color: #d1f1a9
}

/* LiteralStringSymbol */
.chroma .ss {
  color: #d1f1a9
}

/* LiteralNumber */
.chroma .m {
  color: #ffeead
}

/* LiteralNumberBin */
.chroma .mb {
  color: #ffeead
}

/* LiteralNumberFloat */
.chroma .mf {
  color: #ffeead
}

/* LiteralNumberHex */
.chroma .mh {
  color: #ffeead
}

/* LiteralNumberInteger */
.chroma .mi {
  color: #ffeead
}

/* LiteralNumberIntegerLong */
.chroma .il {
  color: #ffeead
}

/* LiteralNumberOct */
.chroma .mo {
  color: #ffeead
}

/* Operator */
.chroma .o {
  color: #5bc4bf
}

/* OperatorWord */
.chroma .ow {
  color: #5bc4bf
}

/* Punctuation */
.chroma .p {}

/* Comment */
.chroma .c {
  color: #7285b7
}

/* CommentHashbang */
.chroma .ch {
  color: #7285b7
}

/* CommentMultiline */
.chroma .cm {
  color: #7285b7
}

/* CommentSingle */
.chroma .c1 {
  color: #7285b7
}

/* CommentSpecial */
.chroma .cs {
  color: #7285b7
}

/* CommentPreproc */
.chroma .cp {
  color: #7285b7
}

/* CommentPreprocFile */
.chroma .cpf {
  color: #7285b7
}

/* Generic */
.chroma .g {}

/* GenericDeleted */
.chroma .gd {
  color: #ffc58f
}

/* GenericEmph */
.chroma .ge {
  font-style: italic
}

/* GenericError */
.chroma .gr {}

/* GenericHeading */
.chroma .gh {
  font-weight: bold
}

/* GenericInserted */
.chroma .gi {
  color: #d1f1a9
}

/* GenericOutput */
.chroma .go {}

/* GenericPrompt */
.chroma .gp {
  color: #7285b7;
  font-weight: bold
}

/* GenericStrong */
.chroma .gs {
  font-weight: bold
}

/* GenericSubheading */
.chroma .gu {
  color: #5bc4bf;
  font-weight: bold
}

/* GenericTraceback */
.chroma .gt {}

/* GenericUnderline */
.chroma .gl {}

/* TextWhitespace */
.chroma .w {}

article blockquote {
  margin: 1.5rem 0;
  padding: 2rem;
  word-break: break-word;
  border-radius: 0.5rem;
  background: #eeeeee;
  border-left: 0.5rem solid #ccc;
}

article ul {
  margin: 0 0 0 2rem;
  padding: 0.5rem 0;
  line-height: 3rem;
  list-style-type: "- ";
}

article ol {
  margin: 0 0 0 2rem;
  line-height: 3rem;
  list-style-type: decimal;
}

article li code {
  background: #eee;
}

article li a:link,
article li a:visited {
  color: #111111;
}

article li a:active,
article li a:hover {
}

article hr {
  background: #eee;
}

article dt {
  line-height: 3rem;
  font-weight: 600;
}

article dd {
  margin: 0 0 0 2rem;
  line-height: 3rem;
}

article table {
  margin: 2rem 0;
  width: 100%;
  line-height: 3rem;
  table-layout: fixed;
  border-collapse: collapse;
  color: #eeeeee;
}

article th {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;   
  padding: 1rem;
  text-align: left;
  vertical-align: middle;
  font-weight: 600;
  color: #111111;
  background: #eeeeee;
  border: 1px solid #ccc;
}

article td {
  padding: 1rem;
  text-align: left;
  vertical-align: middle;
  color: #111111;
  border: 0.1rem solid #cccccc;
}

article td code {
  padding: 0.25rem;
  font-size: 1.5rem;
  border-radius: 0.5rem;
  background: #eeeeee;

}

article td a:link,
article td a:visited {
  color: #333;
  border-bottom: 1px solid #eee;
}

article td a:active,
article td a:hover {
  color: #1a237e;
}

article iframe {
  margin: 1rem 0 1rem 0;
  width: 100%;
  height: 30rem;
  border: 1px solid #eee;
}

.wikilink {
  padding: 0.15rem;
  text-decoration: none;
  color: #111111;
  background-color: #e3f2fd;
  border-radius: 0.5rem;
}

.wikilink:after {
  margin: 0 0 0 0.3rem;
  vertical-align: -0.11rem;
  font-family: remixicon;
  font-size: 1.4rem;
  font-weight: 400;
  content: "\eeb2";
}
aside#related {
    padding: 2rem;
    background: #fafafa;
}

#aside-related-container {
    padding: 2rem;
    font-family: "Open Sans", sans-serif;
    background: #ffffff;
    border-radius: 2rem;
}

#aside-related-container h3 {
    margin: 0 0 1rem 0;
    padding: 0 0 1.5rem 0;
    font-family: Cairo, sans-serif;
    font-weight: 500;
    font-size: 2rem;
    color: #263238;
    border-bottom: 0.1rem solid #eeeeee;
}

#aside-related-container ul {
    padding: 0 0 1rem 0;
}

#aside-related-container li {
    padding: 0 0 1rem 0;
    display: flex;
    align-items: center; 
}

#aside-related-container p {
    padding: 0 0 2rem 0;
    font-size: 1.6rem;

}

#aside-entry a:link,
#aside-entry a:visited {
    color: #000;
    text-decoration: none;
}

#aside-entry {
    flex-grow: 1;
    line-height: 2.5rem;
    font-size: 1.6rem;
}

#aside-type {
    font-size: 1.4rem;
}

#aside-type span {
    display: inline-block;
    margin-left: 1rem;
    white-space: nowrap;
}

#open-entry-in li {
    display: inline-block;
    font-size: 1.6rem;
}

#open-entry-in a:link, 
#open-entry-in a:visited {
    display: inline-block;
    padding: 0.5rem 1rem 0.5rem 1rem;
    border-radius: 2rem;
}

#vim a:link,
#vim a:visited {
    color: #1B5E20;
    background-color: #C8E6C9;
    text-decoration: none;
}

#obsidian a:link,
#obsidian a:visited {
    color: #311B92;
    background-color: #D1C4E9;
    text-decoration: none;
}

span[class*="label_"] {
    display: inline-block;
    padding: 0.5rem 1rem 0.5rem 1rem;
    border-radius: 2rem;
}

.label_title {
    color: #004d40;
    background-color: #e0f2f1;
}

.label_title a {
    color: #004d40;
    text-decoration: none;
}

.label_tech-blog {
    color: #e3f2fd; /* 50 */
    background-color: #1565c0; /* 800 */
}

.label_tech-blog a {
    color: #e3f2fd; /* 50 */
    text-decoration: none;
}

.label_tech-note {
    color: #fce4ec;
    background-color: #ad1457;
}

.label_tech-note a {
    color: #fce4ec;
    text-decoration: none;
}

.label_tech-journal {
    color: #e0f7fa;
    background-color: #00bcd4;
}

.label_tech-journal a {
    color: #e0f7fa;
    background-color: #00bcd4;
    text-decoration: none;
}

.label_tech-archive {
    color: #3e2723;
    background-color: #efebe9;
}
/* ... */

